
Added __autoload() function, removed manually declared includes/requires

Remove <!-- comments --> when sanitizing HTML

Fix: Language files were ignored when using a partition other than the default

Recursively scan ZIP when uploading photos

IIS WebPI efforts

Fixed a redirect issue in 404 and banned templates

Updated symbionts: htmLawed 1.1.9.3

------------------------------------------------------------------------------
sux0r 2.1.0
------------------------------------------------------------------------------

Refactoring:

Since bayesRenderer is reused, it was moved to the extensions/ directory.
Child classes now inherit instead of instatiate.  It was also renamed to
suxBayesRenderer. In addition, bayesUser was renamed to  suxUserNaiveBayesian
to in an attempt to make things clearer. Same for openid class.

Moved the Banned and 404 templates out of the root directory, added them to
the globals module

Renamed the config.php and .htaccess files, turned them into sample files
instead

Pre-pended 'ajax.' to all files that are called correspondingly

Added a DEBUG mode to the advanced configuration file

Updated documentation

Updated symbionts: Scriptaculous 1.8.3, TinyMCE 3.2.7

------------------------------------------------------------------------------
sux0r 2.0.7
------------------------------------------------------------------------------

Change from $cache_id = false to $cache_id = null to remove redundant template
display condition

Added rounded borders and drop shadows to #proselytizer with non-standards
compliant CSS

Fixed JavaScript menus: Z-index only works on elements that are
position:absolute

Bugfix: Weird & character was showing in photoalbum lists

Minor changes to code comments and formatting for legibility reasons

Stopwords were corrupted. Converted back to proper UTF-8 format

Moved  killSession() function to suxUser() class

If available, try to use iconv //TRANSLIT for RSS feeds

Reduce SQL queries when doing loginCheck()
