@@ -1,0 +1,8 @@
+<?php
+
+// Override file
+//
+// Sometimes you just want the same text for case.
+// This file allows you to do just that...
+
+?>
